2004-02-12  Mark McLoughlin  <mark@skynet.ie>

	* file-types-capplet.c: (cb_file_type_dialog_response): Update help
	link to point to user-guide.xml

2004-02-10  Kjartan Maraas  <kmaraas@gnome.org>

	* mime-edit-dialog.c: (mime_edit_dialog_get_app), (validate_data):
	Fix some typos.

2004-02-08  Kjartan Maraas  <kmaraas@gnome.org>

	* mime-edit-dialog.c: (validate_data): Remove extra
	full stop. Closes bug #132563.

2004-02-08  Kjartan Maraas <kmaraas@gnome.org>

	* file-types-icon-entry.c: Replace deprecated calls
	to g_dirname and g_basename.
	(#133174, Kjartan Maraas)

2004-01-20 Sivaiah Nallagatla <snallagatla@novell.com>

	* mime-edit-dialog.c (mime_add_dialog_new ) : do not try to set
	construct only property after object is constructed. Fixes #128374
	
2004-01-14  Jody Goldberg <jody@gnome.org>

	* Release 2.5.2

2003-12-30  Jody Goldberg <jody@gnome.org>

	* Release 2.5.1.1

2003-12-30  Jody Goldberg <jody@gnome.org>

	* Release 2.5.1

2003-12-03  Muktha  <muktha.narayan@wipro.com>

	* file-types-properties.glade: Added the label-for/by relation.
	Fixes #127304.

2003-12-01  Sivaiah Nallagatla  <snallagatla@novell.com>
	
	* service-info.c (service_info_save): Patch to remeber 
	custome program configured for Internet Services. #123976 in b.g.o

Mon Nov 17 00:13:07 2003  Jonathan Blandford  <jrb@gnome.org>

	* service-edit-dialog.c (populate_app_list): Patch from
	snallagatla@novell.com to fix a crash.

2003-10-28  Jody Goldberg <jody@gnome.org>

	* Release 2.5.0

2003-10-07  Muktha  <muktha.narayan@wipro.com>

	* file-types-properties.glade: Added title to the icon entry browse
	dialog. Fixes #122394.

2003-08-01  Dennis Cranston  <dennis_cranston at yahoo com>

	* file-types-properties.glade: Patch to fix spacing between action 
	area and vbox of preferences dialog.

2003-07-17  Dennis Cranston <dennis_cranston at yahoo com>

	* file-types-properties.glade:  Minor HIG widget padding adjustments.

2003-07-07  Jody Goldberg <jody@gnome.org>

	* Release 2.3.4