@@ -1,3 +1,13 @@
+2004-02-10  Jody Goldberg <jody@gnome.org>
+
+	* mime-type-info.c : rework to match nautilus and use icon themes
+	  somewhat.  There is some serious cruft left in here.
+
+2004-02-04  Jody Goldberg <jody@gnome.org>
+
+	* mime-edit-dialog.c (mime_edit_dialog_class_init) : do not call these
+	  construct only properties so that the info can change later.
+
 2004-02-12  Mark McLoughlin  <mark@skynet.ie>
 
 	* file-types-capplet.c: (cb_file_type_dialog_response): Update help
